# MCP-NEWS-CHATBOT

./: .requirements.txt  main.py  news_client.py  news_server.py  pyproject.toml  streamlit_app.py
