[project]
name = "mcp-news-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.2",
    "mcp>=1.27.2",
    "scholarly>=1.7.11",
    "streamlit>=1.58.0",
]
